# Fast-Perching-Dev

./: .gitignore  CMakeLists.txt
examples/: basic_example.cpp  perching_comparison.cpp  precision_test.cpp  simple_comparison.cpp
include/: perching_optimizer.h  traj_opt.h  trajectory_optimizer.h
scripts/: advanced_python_example.py
src/: traj_opt_perching.cc
